-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.12.6, 5.13.2
-
None
-
Windows-10 1903 (didn't try any other versions)
-
-
a82f9f1a1d7a9a0bd0ceebac6a2bc765b01877e5 (qt/qtbase/5.14)
Repro
- Build the "Menus Example" (widget-based)
- Run on Windows-10 with Narrator or NVDA screen reader
- Alt+E (brings up edit menu)
- Navigate to Format with arrow keys
- Menu is read as "Format Alt+F" (NVDA) or "Format Menuitem Menu Key Alt+F" (Narrator), but no indication is given that there is a submenu
Other data
Compare with notepad.exe, View/Zoom, which will read "Zoom Submenu Z" with NVDA or "Zoom Menuitem Collapsed Menu Key Z" with Narrator. The word "submenu" or "collapsed" give hint that this opens a submenu.
On macOS, this "Menu Example" works correctly with VoiceOver, it will add "submenu" when it reads menu items that show a submenu.
Didn't try Linux, but did find this existing issue that might be related: https://bugreports.qt.io/browse/QTBUG-40858
Also see this problem with Qt Creator on Windows (the Qt Creator program menus).
For Gerrit Dashboard: QTBUG-80550 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
284672,3 | Windows QPA: Implement IExpandCollapseProvider for submenus | 5.14 | qt/qtbase | Status: MERGED | +2 | 0 |