src/platformsupport/windowsuiautomation/uiatypes_p.h
@@ -155,6 +155,13 @@ enum WindowInteractionState {
     WindowInteractionState_NotResponding           = 4
 };
 
+enum ExpandCollapseState {
+    ExpandCollapseState_Collapsed         = 0,
+    ExpandCollapseState_Expanded          = 1,
+    ExpandCollapseState_PartiallyExpanded = 2,
+    ExpandCollapseState_LeafNode          = 3
+};
+
 struct UiaRect {
     double left;
     double top;
